@@ -47,6 +47,8 @@
 #  include "chip/sam3u_pinmap.h"
 #elif defined(CONFIG_ARCH_CHIP_SAM3X) || defined(CONFIG_ARCH_CHIP_SAM3A)
 #  include "chip/sam3x_pinmap.h"
+#elif defined(CONFIG_ARCH_CHIP_SAM4E)
+#  include "chip/sam4e_pinmap.h"
 #elif defined(CONFIG_ARCH_CHIP_SAM4L)
 #  include "chip/sam4l_pinmap.h"
 #elif defined(CONFIG_ARCH_CHIP_SAM4S)
