@@ -6652,4 +6652,6 @@
 	* configs/*/defconfig: Comment out all CONFIG_APPS_DIR settings.  These
 	  should not be set in the default configurations because we don't know
 	  where the apps/ directly will reside until configuration time (2014-2-21).
+	* arch/arm/src/sam34/chip/sam4e_pinmap.h:  SAM4E pin multiplexing
+	  definitions (2014-2-21).
 
